--- a/task-backend/public/admin/verification.html
+++ b/task-backend/public/admin/verification.html
@@ -81,7 +81,8 @@
 
     async function fetchTaskers() {
   try {
-    const res = await axios.get("/api/users?verificationStatus=pending");
+    const res = await axios.get("/api/users?verificationStatus=pending&role=tasker");
+
 
     taskers = res.data;
     populateLocationFilter();
@@ -122,7 +123,11 @@
         <p><strong>Phone:</strong> ${tasker.phoneNumber || "N/A"}</p>
         <div class="docs">
           <strong>Documents:</strong><br/>
-          ${tasker.documents?.map(doc => `<a href="${doc}" target="_blank">${doc}</a>`).join("") || "None"}
+          ${tasker.documents?.map(doc => {
+  const url = doc.startsWith("http") ? doc : `/uploads/${doc}`;
+  return `<a href="${url}" target="_blank">${doc.split("/").pop()}</a>`;
+}).join("") || "None"}
+
         </div>
         <div style="margin-top: 12px;">
           <button class="btn btn-accept" onclick="verifyTasker('${tasker._id}', 'accepted')">Accept</button>
