--- a/task-backend/public/admin/verification.html
+++ b/task-backend/public/admin/verification.html
@@ -63,6 +63,8 @@
   </style>
 </head>
 <body>
+  <a href="/admin/" style="display:inline-block; margin-bottom: 20px; font-weight: bold; color: #215432;">← Back to Dashboard</a>
+
 
   <h1>Pending Tasker Verifications</h1>
 
