--- a/task-backend/public/admin/clients.html
+++ b/task-backend/public/admin/clients.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 
+    <div style="margin-bottom: 20px;">
+        <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
+      </div>
+      
+
   <h1>Clients</h1>
 
   <div class="controls">
