--- a/task-backend/public/admin/tasks.html
+++ b/task-backend/public/admin/tasks.html
@@ -14,6 +14,11 @@
   </style>
 </head>
 <body>
+
+    <div style="margin-bottom: 20px;">
+        <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
+      </div>
+      
   <h1>Tasks</h1>
 
   <div class="controls">
