--- a/task-backend/public/admin/verification.html
+++ b/task-backend/public/admin/verification.html
@@ -63,7 +63,10 @@
   </style>
 </head>
 <body>
-  <a href="/admin/" style="display:inline-block; margin-bottom: 20px; font-weight: bold; color: #215432;">← Back to Dashboard</a>
+  <div style="margin-bottom: 20px;">
+    <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
+  </div>
+  
 
 
   <h1>Pending Tasker Verifications</h1>
