Added total users in dashboard

--- a/task-backend/public/admin/index.html
+++ b/task-backend/public/admin/index.html
@@ -50,9 +50,10 @@
 
       const container = document.getElementById("statsContainer");
       container.innerHTML = `
+        <div class="card"><h2>${stats.totalUsers}</h2><p>Total Users</p></div>
         <div class="card"><h2>${stats.clients}</h2><p>Total Clients</p></div>
         <div class="card"><h2>${stats.taskers}</h2><p>Total Taskers</p></div>
-        <div class="card"><h2>${stats.verifiedTaskers}</h2><p>Verified Taskers</p></div>
+        <div class="card"><h2>${stats.verifiedTaskers}</h2><pVerified Taskers</p></div>
         <div class="card"><h2>${stats.tasks}</h2><p>Total Tasks</p></div>
       `;
     }
