adding logic functionality in my tasks regarding report button

--- a/task-backend/public/admin/reports.html
+++ b/task-backend/public/admin/reports.html
@@ -12,7 +12,13 @@
     tr:hover { background-color: #f9f9f9; }
   </style>
 </head>
+
+
 <body>
+
+  <div style="margin-bottom: 20px;">
+    <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
+  </div>
 
 <h1>Reported Users</h1>
 
