--- a/task-backend/public/admin/index.html
+++ b/task-backend/public/admin/index.html
@@ -3,61 +3,198 @@
 <head>
   <meta charset="UTF-8" />
   <title>Admin Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; background: #f2f2f2; padding: 40px; }
-    h1 { text-align: center; color: #215432; margin-bottom: 30px; }
-    .cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
-    .card {
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #f2f2f2;
+      display: flex;
+    }
+
+    .sidebar {
+      width: 220px;
+      background: #213729;
+      color: white;
+      padding: 20px 0;
+      height: 100vh;
+    }
+
+    .sidebar h2 {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 20px;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .sidebar a.active,
+    .sidebar a:hover {
+      background: #215432;
+    }
+
+    .main {
+      flex: 1;
+      padding: 30px;
+    }
+
+    .main h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    .stats {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    .stat-card {
+      background: white;
+      border-radius: 10px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .stat-card h2 {
+      font-size: 28px;
+      margin: 0;
+      color: #000;
+    }
+
+    .stat-card p {
+      color: #777;
+      margin-top: 5px;
+    }
+
+    .charts {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+    }
+
+    .chart {
       background: white;
       border-radius: 10px;
       padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      text-align: center;
+      height: 220px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.08);
     }
-    .card h2 { font-size: 32px; margin: 10px 0; color: #215432; }
-    .card p { font-size: 14px; color: #666; }
-    .nav { margin-top: 40px; text-align: center; }
-    .nav a {
-      margin: 0 10px;
-      padding: 10px 20px;
+
+    .chart-title {
+      margin-bottom: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .tabs button {
+      margin-left: 5px;
+      padding: 4px 10px;
+      border: none;
+      background: #e2e2e2;
+      border-radius: 6px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    .tabs button.active {
       background: #215432;
       color: white;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
+    }
+
+    .chart:last-child {
+      grid-column: span 2;
+    }
+
+    .icon {
+      width: 16px;
     }
   </style>
 </head>
 <body>
-  <h1>Admin Dashboard</h1>
-
-  <div class="cards" id="statsContainer">
-    <!-- JS will insert cards here -->
+  <div class="sidebar">
+    <h2>✅ TASK</h2>
+    <a class="active" href="#"><span>🏠</span> Dashboard</a>
+    <a href="/admin/clients.html"><span>👥</span> Clients</a>
+    <a href="/admin/taskers.html"><span>🛠️</span> Taskers</a>
+    <a href="/admin/tasks.html"><span>📋</span> Tasks</a>
+    <a href="/admin/reports.html"><span>🚨</span> Reported Users</a>
   </div>
 
-  <div class="nav">
-    <a href="/admin/clients.html">Clients</a>
-    <a href="/admin/taskers.html">Taskers</a>
-    <a href="/admin/tasks.html">Tasks</a>
-    <a href="/admin/verification.html">Verifications</a>
-    <a href="/admin/reports.html">Reported Users</a>
+  <div class="main">
+    <h1>Dashboard</h1>
+
+    <div class="stats" id="statsContainer">
+      <!-- JS will insert cards here -->
+    </div>
+
+    <div class="charts">
+      <div class="chart">
+        <div class="chart-title">
+          <strong>Graph of Clients vs Time</strong>
+          <div class="tabs">
+            <button class="active">Week</button>
+            <button>Month</button>
+            <button>Year</button>
+          </div>
+        </div>
+        <p style="text-align:center;">(How many clients signed up each day)</p>
+      </div>
+
+      <div class="chart">
+        <div class="chart-title">
+          <strong>Graph of Tasks Created</strong>
+          <div class="tabs">
+            <button class="active">Week</button>
+            <button>Month</button>
+            <button>Year</button>
+          </div>
+        </div>
+        <p style="text-align:center;">(Tasks posted over time)</p>
+      </div>
+
+      <div class="chart">
+        <div class="chart-title">
+          <strong>Graph of Verified Taskers</strong>
+          <div class="tabs">
+            <button class="active">Week</button>
+            <button>Month</button>
+            <button>Year</button>
+          </div>
+        </div>
+        <p style="text-align:center;">(Taskers approved over time)</p>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
     async function fetchStats() {
-      const res = await axios.get("/api/admin/stats");
-      const stats = res.data;
+      try {
+        const res = await axios.get("/api/admin/stats");
+        const stats = res.data;
 
-      const container = document.getElementById("statsContainer");
-container.innerHTML = `
-  <div class="card"><h2>${stats.totalUsers}</h2><p>Total Users</p></div>
-  <div class="card"><h2>${stats.clients}</h2><p>Total Clients</p></div>
-  <div class="card"><h2>${stats.taskers}</h2><p>Total Taskers</p></div>
-  <div class="card"><h2>${stats.verifiedTaskers}</h2><p>Verified Taskers</p></div>
-  <div class="card"><h2>${stats.tasks}</h2><p>Total Tasks</p></div>
-`;
-
+        const container = document.getElementById("statsContainer");
+        container.innerHTML = `
+          <div class="stat-card"><h2>${stats.totalUsers}</h2><p>Total Users</p></div>
+          <div class="stat-card"><h2>${stats.clients}</h2><p>Total Clients</p></div>
+          <div class="stat-card"><h2>${stats.taskers}</h2><p>Total Taskers</p></div>
+          <div class="stat-card"><h2>${stats.verifiedTaskers}</h2><p>Verified Taskers</p></div>
+          <div class="stat-card"><h2>${stats.tasks}</h2><p>Total Tasks</p></div>
+        `;
+      } catch (err) {
+        console.error("Failed to load stats:", err);
+      }
     }
 
     fetchStats();
