--- a/task-backend/public/admin/clients.html
+++ b/task-backend/public/admin/clients.html
@@ -3,64 +3,181 @@
 <head>
   <meta charset="UTF-8" />
   <title>Admin – Clients</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; background: #f8f8f8; padding: 20px; }
-    h1 { color: #215432; text-align: center; }
-    .controls { display: flex; justify-content: space-between; margin-bottom: 20px; }
-    .search-input { padding: 8px; width: 250px; border-radius: 6px; border: 1px solid #ccc; }
-    .table { width: 100%; border-collapse: collapse; background: white; }
-    th, td { padding: 12px; border-bottom: 1px solid #ddd; text-align: left; }
-    th { background: #215432; color: white; }
-    .actions button { margin-right: 6px; padding: 6px 10px; border: none; border-radius: 4px; cursor: pointer; }
-    .block { background: #ff9800; color: white; }
-    .delete { background: #f44336; color: white; }
-    .unblock { background: #4caf50; color: white; }
-    img { width: 40px; height: 40px; border-radius: 50%; object-fit: cover; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      background: #f8f8f8;
+    }
+
+    .sidebar {
+      width: 220px;
+      background: white;
+      color: #215432;
+      padding: 20px 0;
+      height: 100vh;
+      border-right: 1px solid #ddd;
+    }
+
+    .sidebar img {
+      display: block;
+      margin: 0 auto 40px auto;
+      width: 100px;
+    }
+
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 20px;
+      color: #215432;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .sidebar a.active,
+    .sidebar a:hover {
+      background: #f1f8f4;
+    }
+
+    .main {
+      flex: 1;
+      padding: 30px;
+    }
+
+    h1 {
+      font-size: 24px;
+      color: #000;
+      margin-bottom: 20px;
+    }
+
+    .container {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    }
+
+    .search-input {
+      padding: 10px 12px;
+      width: 100%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 20px;
+      font-size: 14px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 14px 12px;
+      border-bottom: 1px solid #e0e0e0;
+      font-size: 14px;
+    }
+
+    th {
+      background: #f4f4f4;
+      font-weight: 600;
+      text-align: left;
+    }
+
+    .actions {
+      display: flex;
+      gap: 8px;
+    }
+
+    .block-btn {
+      background: #ffb74d;
+      color: #fff;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .delete-btn {
+      background: #ef5350;
+      color: #fff;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .view-btn {
+      background: none;
+      color: #215432;
+      border: none;
+      font-weight: 600;
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    .pagination-buttons {
+      margin-top: 20px;
+    }
+
+    .pagination-buttons button {
+      padding: 6px 10px;
+      margin-right: 5px;
+      border: 1px solid #ccc;
+      background: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-
-    <div style="margin-bottom: 20px;">
-        <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
-      </div>
-      
-
-  <h1>Clients</h1>
-
-  <div class="controls">
-    <input type="text" id="search" class="search-input" placeholder="Search by name or email..." />
+  <div class="sidebar">
+    <img src="21.png" alt="TASK Logo" />
+    <a href="/admin/index.html">🏠 Dashboard</a>
+    <a class="active" href="/admin/clients.html">👥 Clients</a>
+    <a href="/admin/taskers.html">🛠️ Taskers</a>
+    <a href="/admin/tasks.html">📋 Tasks</a>
+    <a href="/admin/reports.html">❓ Reported Users</a>
   </div>
 
-  <table class="table" id="clientsTable">
-    <thead>
-      <tr>
-        <th>Image</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Phone</th>
-        <th>Total Tasks</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="main">
+    <div class="container">
+      <h1>Client List</h1>
+      <input type="text" id="search" class="search-input" placeholder="Search Clients..." />
+
+      <table id="clientsTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+
+      <div class="pagination-buttons" id="pagination"></div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
   <script>
     let allClients = [];
     let currentPage = 1;
-let totalClients = 0;
-
+    let totalClients = 0;
 
     async function fetchClients() {
-        const res = await axios.get(`/api/admin/clients?page=${currentPage}&limit=10`);
-        allClients = res.data.clients;
-totalClients = res.data.total;
-
-renderClients(allClients);
-renderPagination();
-
+      const res = await axios.get(`/api/admin/clients?page=${currentPage}&limit=10`);
+      allClients = res.data.clients;
+      totalClients = res.data.total;
+      renderClients(allClients);
+      renderPagination();
     }
 
     function renderClients(data) {
@@ -69,16 +186,15 @@ renderPagination();
       data.forEach(c => {
         const tr = document.createElement("tr");
         tr.innerHTML = `
-          <td><img src="${c.image || 'https://via.placeholder.com/40'}" /></td>
           <td>${c.name}</td>
           <td>${c.email}</td>
-          <td>${c.phone}</td> 
-          <td>${c.totalTasks}</td>
+          <td>${c.phone}</td>
           <td class="actions">
-            <button class="${c.isBlocked ? 'unblock' : 'block'}" onclick="toggleBlock('${c._id}', ${!c.isBlocked})">
+            <button class="block-btn" onclick="toggleBlock('${c._id}', ${!c.isBlocked})">
               ${c.isBlocked ? 'Unblock' : 'Block'}
             </button>
-            <button class="delete" onclick="deleteClient('${c._id}')">Delete</button>
+            <button class="delete-btn" onclick="deleteClient('${c._id}')">Delete</button>
+            <button class="view-btn" onclick="viewProfile('${c._id}')">View profile</button>
           </td>
         `;
         tbody.appendChild(tr);
@@ -98,38 +214,32 @@ renderPagination();
       }
     }
 
+    function viewProfile(id) {
+      window.location.href = `/admin/client-profile.html?id=${id}`;
+    }
+
     document.getElementById("search").addEventListener("input", e => {
       const term = e.target.value.toLowerCase();
       const filtered = allClients.filter(c => c.name.toLowerCase().includes(term) || c.email.toLowerCase().includes(term));
       renderClients(filtered);
     });
 
-    fetchClients();
-
-
     function renderPagination() {
-  const totalPages = Math.ceil(totalClients / 10);
-  const controlsDiv = document.querySelector(".controls");
+      const totalPages = Math.ceil(totalClients / 10);
+      const container = document.getElementById("pagination");
+      container.innerHTML = "";
+      for (let i = 1; i <= totalPages; i++) {
+        const btn = document.createElement("button");
+        btn.textContent = i;
+        btn.onclick = () => {
+          currentPage = i;
+          fetchClients();
+        };
+        container.appendChild(btn);
+      }
+    }
 
-  // Remove previous pagination if any
-  const oldPagination = controlsDiv.querySelector(".pagination-buttons");
-  if (oldPagination) oldPagination.remove();
-
-  // Create new pagination
-  let html = '<div class="pagination-buttons">';
-  for (let i = 1; i <= totalPages; i++) {
-    html += `<button onclick="goToPage(${i})" style="margin-left: 6px;">${i}</button>`;
-  }
-  html += '</div>';
-  controlsDiv.insertAdjacentHTML("beforeend", html);
-}
-
-
-function goToPage(page) {
-  currentPage = page;
-  fetchClients();
-}
-
+    fetchClients();
   </script>
 </body>
 </html>
