--- a/task-backend/public/admin/client-profile.html
+++ b/task-backend/public/admin/client-profile.html
@@ -164,7 +164,7 @@
         <div class="card">
           <p><strong>Task Name</strong> – ${t.title}</p>
           <p><strong>Category</strong> – ${t.category}</p>
-          <p><strong>Adress</strong> – ${t.location}</p>
+          <p><strong>Address</strong> – ${t.location}</p>
           <p><strong>Job Description</strong> – ${t.description}</p>
           ${t.images.length ? `<p><strong>Images</strong></p><div>${t.images.map(() => `<span class="gray-box"></span>`).join('')}</div>` : ""}
           <p style="margin-top: 5px;"><strong>Date Created</strong> – ${t.createdAt}</p>
